--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.0.2",
-    "@rematch/core": "^0.6.0",
+    "@rematch/core": "^1.0.0-beta.4",
     "axios": "^0.18.0",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
+    "react-redux": "^5.0.7",
     "react-scripts-ts": "2.17.0",
     "styled-components": "^3.4.5"
   },
@@ -22,6 +23,7 @@
     "@types/node": "^10.9.4",
     "@types/react": "^16.4.13",
     "@types/react-dom": "^16.0.7",
-    "typescript": "^3.0.3"
+    "@types/react-redux": "^6.0.7",
+    "typescript": "^2.9.1"
   }
 }
