--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^3.0.2",
     "@rematch/core": "^1.0.0-beta.4",
     "axios": "^0.18.0",
+    "ramda": "^0.25.0",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-redux": "^5.0.7",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@types/jest": "^23.3.1",
     "@types/node": "^10.9.4",
+    "@types/ramda": "^0.25.37",
     "@types/react": "^16.4.13",
     "@types/react-dom": "^16.0.7",
     "@types/react-redux": "^6.0.7",
