--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^3.0.2",
     "@rematch/core": "^1.0.0-beta.4",
+    "@rematch/select": "^1.0.2",
     "axios": "^0.18.0",
     "ramda": "^0.25.0",
     "react": "^16.5.0",
