--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.5.0",
     "react-redux": "^5.0.7",
     "react-scripts-ts": "2.17.0",
+    "react-toastify": "^4.3.0",
     "styled-components": "^3.4.5"
   },
   "scripts": {
