--- a/package.json
+++ b/package.json
@@ -16,10 +16,9 @@
     "styled-components": "^3.4.5"
   },
   "scripts": {
-    "start": "react-scripts-ts start",
-    "build": "react-scripts-ts build",
-    "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "start": "react-app-rewired start --scripts-version react-scripts-ts",
+    "build": "react-app-rewired build --scripts-version react-scripts-ts",
+    "test": "react-app-rewired test --scripts-version react-scripts-ts --env=jsdom"
   },
   "devDependencies": {
     "@types/jest": "^23.3.1",
@@ -28,6 +27,10 @@
     "@types/react": "^16.4.13",
     "@types/react-dom": "^16.0.7",
     "@types/react-redux": "^6.0.7",
+    "jest-localstorage-mock": "^2.2.0",
+    "react-app-rewired": "^1.6.2",
+    "react-testing-library": "^5.0.1",
     "typescript": "^2.9.1"
-  }
+  },
+  "homepage": "."
 }
